plugins/kotlin/idea/tests/testData/multiModuleLineMarker/actualEnumEntriesInOneLine/jvm/jvm.kt
package test

actual enum class <!LINE_MARKER("descr='Has expects in common module'; targets=[(text=Enum; container=common; icon=nodes/Module.svg); (text=A; container=common; icon=nodes/Module.svg); (text=B; container=common; icon=nodes/Module.svg); (text=C; container=common; icon=nodes/Module.svg)]")!>Enum<!> { A, B, C }
